added endpoint "/reservation" get, mvcConfig - cors